Mejora de Api Rest con Spring Boot